GTK4/Package_Tools/include-C/gsk/gskrendernode.h

// // // // 

#define GSK_TYPE_RENDER_NODE (gsk_render_node_get_type ())
#define GSK_IS_RENDER_NODE(obj) ((obj) != NULL)
#define GSK_SERIALIZATION_ERROR       (gsk_serialization_error_quark ())
typedef struct _GskRenderNode           GskRenderNode;
typedef struct _GskShadow               GskShadow;
GType                   gsk_render_node_get_type                (void) ;
GQuark                  gsk_serialization_error_quark           (void);
#define GSK_TYPE_DEBUG_NODE                     (gsk_debug_node_get_type())
#define GSK_TYPE_COLOR_NODE                     (gsk_color_node_get_type())
#define GSK_TYPE_TEXTURE_NODE                   (gsk_texture_node_get_type())
#define GSK_TYPE_LINEAR_GRADIENT_NODE           (gsk_linear_gradient_node_get_type())
#define GSK_TYPE_REPEATING_LINEAR_GRADIENT_NODE (gsk_repeating_linear_gradient_node_get_type())
#define GSK_TYPE_RADIAL_GRADIENT_NODE           (gsk_radial_gradient_node_get_type())
#define GSK_TYPE_REPEATING_RADIAL_GRADIENT_NODE (gsk_repeating_radial_gradient_node_get_type())
#define GSK_TYPE_CONIC_GRADIENT_NODE            (gsk_conic_gradient_node_get_type())
#define GSK_TYPE_BORDER_NODE                    (gsk_border_node_get_type())
#define GSK_TYPE_INSET_SHADOW_NODE              (gsk_inset_shadow_node_get_type())
#define GSK_TYPE_OUTSET_SHADOW_NODE             (gsk_outset_shadow_node_get_type())
#define GSK_TYPE_CAIRO_NODE                     (gsk_cairo_node_get_type())
#define GSK_TYPE_CONTAINER_NODE                 (gsk_container_node_get_type())
#define GSK_TYPE_TRANSFORM_NODE                 (gsk_transform_node_get_type())
#define GSK_TYPE_OPACITY_NODE                   (gsk_opacity_node_get_type())
#define GSK_TYPE_COLOR_MATRIX_NODE              (gsk_color_matrix_node_get_type())
#define GSK_TYPE_REPEAT_NODE                    (gsk_repeat_node_get_type())
#define GSK_TYPE_CLIP_NODE                      (gsk_clip_node_get_type())
#define GSK_TYPE_ROUNDED_CLIP_NODE              (gsk_rounded_clip_node_get_type())
#define GSK_TYPE_SHADOW_NODE                    (gsk_shadow_node_get_type())
#define GSK_TYPE_BLEND_NODE                     (gsk_blend_node_get_type())
#define GSK_TYPE_CROSS_FADE_NODE                (gsk_cross_fade_node_get_type())
#define GSK_TYPE_TEXT_NODE                      (gsk_text_node_get_type())
#define GSK_TYPE_BLUR_NODE                      (gsk_blur_node_get_type())
#define GSK_TYPE_GL_SHADER_NODE                 (gsk_gl_shader_node_get_type())
GType                   gsk_debug_node_get_type                 (void) ;
GType                   gsk_color_node_get_type                 (void) ;
GType                   gsk_texture_node_get_type               (void) ;
GType                   gsk_linear_gradient_node_get_type           (void) ;
GType                   gsk_repeating_linear_gradient_node_get_type (void) ;
GType                   gsk_conic_gradient_node_get_type            (void) ;
GType                   gsk_radial_gradient_node_get_type (void) ;
GType                   gsk_repeating_radial_gradient_node_get_type (void) ;
GType                   gsk_border_node_get_type                (void) ;
GType                   gsk_inset_shadow_node_get_type          (void) ;
GType                   gsk_outset_shadow_node_get_type         (void) ;
GType                   gsk_cairo_node_get_type                 (void) ;
GType                   gsk_container_node_get_type             (void) ;
GType                   gsk_transform_node_get_type             (void) ;
GskRenderNode *         gsk_transform_node_get_child            (const GskRenderNode      *node) ;
GskTransform *          gsk_transform_node_get_transform        (const GskRenderNode      *node) ;
GType                   gsk_opacity_node_get_type               (void) ;
GskRenderNode *         gsk_opacity_node_new                    (GskRenderNode            *child,
                                                                 float                     opacity);
GskRenderNode *         gsk_opacity_node_get_child              (const GskRenderNode      *node) ;
float                   gsk_opacity_node_get_opacity            (const GskRenderNode      *node) ;
GType                   gsk_color_matrix_node_get_type          (void) ;
GskRenderNode *         gsk_color_matrix_node_new               (GskRenderNode            *child,
                                                                 const graphene_matrix_t  *color_matrix,
                                                                 const graphene_vec4_t    *color_offset);
GskRenderNode *         gsk_color_matrix_node_get_child         (const GskRenderNode      *node) ;
const graphene_matrix_t *
                        gsk_color_matrix_node_get_color_matrix  (const GskRenderNode      *node) ;
const graphene_vec4_t * gsk_color_matrix_node_get_color_offset  (const GskRenderNode      *node) ;
GType                   gsk_repeat_node_get_type                (void) ;
GskRenderNode *         gsk_repeat_node_new                     (const graphene_rect_t    *bounds,
                                                                 GskRenderNode            *child,
                                                                 const graphene_rect_t    *child_bounds);
GskRenderNode *         gsk_repeat_node_get_child               (const GskRenderNode      *node) ;
const graphene_rect_t * gsk_repeat_node_get_child_bounds        (const GskRenderNode      *node) ;
GType                   gsk_clip_node_get_type                  (void) ;
GskRenderNode *         gsk_clip_node_new                       (GskRenderNode            *child,
                                                                 const graphene_rect_t    *clip);
GskRenderNode *         gsk_clip_node_get_child                 (const GskRenderNode      *node) ;
const graphene_rect_t * gsk_clip_node_get_clip                  (const GskRenderNode      *node) ;
GType                   gsk_rounded_clip_node_get_type          (void) ;
GskRenderNode *         gsk_rounded_clip_node_new               (GskRenderNode            *child,
                                                                 const GskRoundedRect     *clip);
GskRenderNode *         gsk_rounded_clip_node_get_child         (const GskRenderNode      *node) ;
const GskRoundedRect *  gsk_rounded_clip_node_get_clip          (const GskRenderNode      *node) ;
GType                   gsk_shadow_node_get_type                (void) ;
GskRenderNode *         gsk_shadow_node_new                     (GskRenderNode            *child,
                                                                 const GskShadow          *shadows,
                                                                 gsize                     n_shadows);
GskRenderNode *         gsk_shadow_node_get_child               (const GskRenderNode      *node) ;
const GskShadow *       gsk_shadow_node_get_shadow              (const GskRenderNode      *node,
                                                                 gsize                     i) ;
gsize                   gsk_shadow_node_get_n_shadows           (const GskRenderNode      *node) ;
GType                   gsk_blend_node_get_type                 (void) ;
GskRenderNode *         gsk_blend_node_new                      (GskRenderNode            *bottom,
                                                                 GskRenderNode            *top,
                                                                 GskBlendMode              blend_mode);
GskRenderNode *         gsk_blend_node_get_bottom_child         (const GskRenderNode      *node) ;
GskRenderNode *         gsk_blend_node_get_top_child            (const GskRenderNode      *node) ;
GskBlendMode            gsk_blend_node_get_blend_mode           (const GskRenderNode      *node) ;
GType                   gsk_cross_fade_node_get_type            (void) ;
GskRenderNode *         gsk_cross_fade_node_new                 (GskRenderNode            *start,
                                                                 GskRenderNode            *end,
                                                                 float                     progress);
GskRenderNode *         gsk_cross_fade_node_get_start_child     (const GskRenderNode      *node) ;
GskRenderNode *         gsk_cross_fade_node_get_end_child       (const GskRenderNode      *node) ;
float                   gsk_cross_fade_node_get_progress        (const GskRenderNode      *node) ;
GType                   gsk_text_node_get_type                  (void) ;
GskRenderNode *         gsk_text_node_new                       (PangoFont                *font,
                                                                 PangoGlyphString         *glyphs,
                                                                 const GdkRGBA            *color,
                                                                 const graphene_point_t   *offset);
PangoFont *             gsk_text_node_get_font                  (const GskRenderNode      *node) ;
gboolean                gsk_text_node_has_color_glyphs          (const GskRenderNode      *node) ;
guint                   gsk_text_node_get_num_glyphs            (const GskRenderNode      *node) ;
const PangoGlyphInfo   *gsk_text_node_get_glyphs                (const GskRenderNode      *node,
                                                                 guint                    *n_glyphs) ;
const GdkRGBA *         gsk_text_node_get_color                 (const GskRenderNode      *node) ;
const graphene_point_t *gsk_text_node_get_offset                (const GskRenderNode      *node) ;
GType                   gsk_blur_node_get_type                  (void) ;
GskRenderNode *         gsk_blur_node_new                       (GskRenderNode            *child,
                                                                 float                     radius);
GskRenderNode *         gsk_blur_node_get_child                 (const GskRenderNode      *node) ;
float                   gsk_blur_node_get_radius                (const GskRenderNode      *node) ;
GType                   gsk_gl_shader_node_get_type              (void) ;
GskRenderNode *         gsk_gl_shader_node_new                  (GskGLShader              *shader,
                                                                 const graphene_rect_t    *bounds,
                                                                 GBytes                   *args,
                                                                 GskRenderNode           **children,
                                                                 guint                     n_children);
guint                   gsk_gl_shader_node_get_n_children       (const GskRenderNode      *node) ;
GskRenderNode *         gsk_gl_shader_node_get_child            (const GskRenderNode      *node,
                                                                 guint                     idx) ;
GBytes *                gsk_gl_shader_node_get_args             (const GskRenderNode      *node) ;
GskGLShader *           gsk_gl_shader_node_get_shader           (const GskRenderNode      *node) ;
/**
 * GSK_VALUE_HOLDS_RENDER_NODE:
 * @value: a `GValue`
 *
 * Evaluates to %TRUE if @value was initialized with %GSK_TYPE_RENDER_NODE.
 */
#define GSK_VALUE_HOLDS_RENDER_NODE(value)       (G_VALUE_HOLDS ((value), GSK_TYPE_RENDER_NODE))
GDK_AVAILABLE_IN_4_4
void                    gsk_value_set_render_node               (GValue                   *value,
                                                                 GskRenderNode            *node);
GDK_AVAILABLE_IN_4_4
void                    gsk_value_take_render_node              (GValue                   *value,
                                                                 GskRenderNode            *node);
GDK_AVAILABLE_IN_4_4
GskRenderNode *         gsk_value_get_render_node               (const GValue             *value);
GDK_AVAILABLE_IN_4_4
GskRenderNode *         gsk_value_dup_render_node               (const GValue             *value);