GTK4-Konverter_Alpha/header/gsk/gskrendernode.pp


function gsk_transform_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_transform_node_get_transform(node:PGskRenderNode):PGskTransform;cdecl;external;

function gsk_opacity_node_get_type:TGType;cdecl;external;

function gsk_opacity_node_new(child:PGskRenderNode; opacity:single):PGskRenderNode;cdecl;external;

function gsk_opacity_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_opacity_node_get_opacity(node:PGskRenderNode):single;cdecl;external;

function gsk_color_matrix_node_get_type:TGType;cdecl;external;

function gsk_color_matrix_node_new(child:PGskRenderNode; color_matrix:Pgraphene_matrix_t; color_offset:Pgraphene_vec4_t):PGskRenderNode;cdecl;external;

function gsk_color_matrix_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_color_matrix_node_get_color_matrix(node:PGskRenderNode):Pgraphene_matrix_t;cdecl;external;

function gsk_color_matrix_node_get_color_offset(node:PGskRenderNode):Pgraphene_vec4_t;cdecl;external;

function gsk_repeat_node_get_type:TGType;cdecl;external;

function gsk_repeat_node_new(bounds:Pgraphene_rect_t; child:PGskRenderNode; child_bounds:Pgraphene_rect_t):PGskRenderNode;cdecl;external;

function gsk_repeat_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_repeat_node_get_child_bounds(node:PGskRenderNode):Pgraphene_rect_t;cdecl;external;

function gsk_clip_node_get_type:TGType;cdecl;external;

function gsk_clip_node_new(child:PGskRenderNode; clip:Pgraphene_rect_t):PGskRenderNode;cdecl;external;

function gsk_clip_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_clip_node_get_clip(node:PGskRenderNode):Pgraphene_rect_t;cdecl;external;

function gsk_rounded_clip_node_get_type:TGType;cdecl;external;

function gsk_rounded_clip_node_new(child:PGskRenderNode; clip:PGskRoundedRect):PGskRenderNode;cdecl;external;

function gsk_rounded_clip_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_rounded_clip_node_get_clip(node:PGskRenderNode):PGskRoundedRect;cdecl;external;

function gsk_shadow_node_get_type:TGType;cdecl;external;

function gsk_shadow_node_new(child:PGskRenderNode; shadows:PGskShadow; n_shadows:Tgsize):PGskRenderNode;cdecl;external;

function gsk_shadow_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_shadow_node_get_shadow(node:PGskRenderNode; i:Tgsize):PGskShadow;cdecl;external;

function gsk_shadow_node_get_n_shadows(node:PGskRenderNode):Tgsize;cdecl;external;

function gsk_blend_node_get_type:TGType;cdecl;external;

function gsk_blend_node_new(bottom:PGskRenderNode; top:PGskRenderNode; blend_mode:TGskBlendMode):PGskRenderNode;cdecl;external;

function gsk_blend_node_get_bottom_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_blend_node_get_top_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_blend_node_get_blend_mode(node:PGskRenderNode):TGskBlendMode;cdecl;external;

function gsk_cross_fade_node_get_type:TGType;cdecl;external;

function gsk_cross_fade_node_new(start:PGskRenderNode; end:PGskRenderNode; progress:single):PGskRenderNode;cdecl;external;

function gsk_cross_fade_node_get_start_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_cross_fade_node_get_end_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_cross_fade_node_get_progress(node:PGskRenderNode):single;cdecl;external;

function gsk_text_node_get_type:TGType;cdecl;external;

function gsk_text_node_new(font:PPangoFont; glyphs:PPangoGlyphString; color:PGdkRGBA; offset:Pgraphene_point_t):PGskRenderNode;cdecl;external;

function gsk_text_node_get_font(node:PGskRenderNode):PPangoFont;cdecl;external;

function gsk_text_node_has_color_glyphs(node:PGskRenderNode):Tgboolean;cdecl;external;

function gsk_text_node_get_num_glyphs(node:PGskRenderNode):Tguint;cdecl;external;

function gsk_text_node_get_glyphs(node:PGskRenderNode; n_glyphs:Pguint):PPangoGlyphInfo;cdecl;external;

function gsk_text_node_get_color(node:PGskRenderNode):PGdkRGBA;cdecl;external;

function gsk_text_node_get_offset(node:PGskRenderNode):Pgraphene_point_t;cdecl;external;

function gsk_blur_node_get_type:TGType;cdecl;external;

function gsk_blur_node_new(child:PGskRenderNode; radius:single):PGskRenderNode;cdecl;external;

function gsk_blur_node_get_child(node:PGskRenderNode):PGskRenderNode;cdecl;external;

function gsk_blur_node_get_radius(node:PGskRenderNode):single;cdecl;external;

function gsk_gl_shader_node_get_type:TGType;cdecl;external;

function gsk_gl_shader_node_new(shader:PGskGLShader; bounds:Pgraphene_rect_t; args:PGBytes; children:PPGskRenderNode; n_children:Tguint):PGskRenderNode;cdecl;external;

function gsk_gl_shader_node_get_n_children(node:PGskRenderNode):Tguint;cdecl;external;

function gsk_gl_shader_node_get_child(node:PGskRenderNode; idx:Tguint):PGskRenderNode;cdecl;external;

function gsk_gl_shader_node_get_args(node:PGskRenderNode):PGBytes;cdecl;external;

function gsk_gl_shader_node_get_shader(node:PGskRenderNode):PGskGLShader;cdecl;external;

function GSK_VALUE_HOLDS_RENDER_NODE(value : longint) : longint;


procedure gsk_value_set_render_node(value:PGValue; node:PGskRenderNode);cdecl;external;

procedure gsk_value_take_render_node(value:PGValue; node:PGskRenderNode);cdecl;external;

function gsk_value_get_render_node(value:PGValue):PGskRenderNode;cdecl;external;

function gsk_value_dup_render_node(value:PGValue):PGskRenderNode;cdecl;external;

{$endif}


implementation

function GSK_TYPE_RENDER_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_RENDER_NODE:=gsk_render_node_get_type;
  end;

function GSK_IS_RENDER_NODE(obj : longint) : longint;
begin
  GSK_IS_RENDER_NODE:=obj<>NULL;
end;

function GSK_SERIALIZATION_ERROR : longint; { return type might be wrong }
  begin
    GSK_SERIALIZATION_ERROR:=gsk_serialization_error_quark;
  end;

function GSK_TYPE_DEBUG_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_DEBUG_NODE:=gsk_debug_node_get_type;
  end;

function GSK_TYPE_COLOR_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_COLOR_NODE:=gsk_color_node_get_type;
  end;

function GSK_TYPE_TEXTURE_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_TEXTURE_NODE:=gsk_texture_node_get_type;
  end;

function GSK_TYPE_LINEAR_GRADIENT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_LINEAR_GRADIENT_NODE:=gsk_linear_gradient_node_get_type;
  end;

function GSK_TYPE_REPEATING_LINEAR_GRADIENT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_REPEATING_LINEAR_GRADIENT_NODE:=gsk_repeating_linear_gradient_node_get_type;
  end;

function GSK_TYPE_RADIAL_GRADIENT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_RADIAL_GRADIENT_NODE:=gsk_radial_gradient_node_get_type;
  end;

function GSK_TYPE_REPEATING_RADIAL_GRADIENT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_REPEATING_RADIAL_GRADIENT_NODE:=gsk_repeating_radial_gradient_node_get_type;
  end;

function GSK_TYPE_CONIC_GRADIENT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_CONIC_GRADIENT_NODE:=gsk_conic_gradient_node_get_type;
  end;

function GSK_TYPE_BORDER_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_BORDER_NODE:=gsk_border_node_get_type;
  end;

function GSK_TYPE_INSET_SHADOW_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_INSET_SHADOW_NODE:=gsk_inset_shadow_node_get_type;
  end;

function GSK_TYPE_OUTSET_SHADOW_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_OUTSET_SHADOW_NODE:=gsk_outset_shadow_node_get_type;
  end;

function GSK_TYPE_CAIRO_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_CAIRO_NODE:=gsk_cairo_node_get_type;
  end;

function GSK_TYPE_CONTAINER_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_CONTAINER_NODE:=gsk_container_node_get_type;
  end;

function GSK_TYPE_TRANSFORM_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_TRANSFORM_NODE:=gsk_transform_node_get_type;
  end;

function GSK_TYPE_OPACITY_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_OPACITY_NODE:=gsk_opacity_node_get_type;
  end;

function GSK_TYPE_COLOR_MATRIX_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_COLOR_MATRIX_NODE:=gsk_color_matrix_node_get_type;
  end;

function GSK_TYPE_REPEAT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_REPEAT_NODE:=gsk_repeat_node_get_type;
  end;

function GSK_TYPE_CLIP_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_CLIP_NODE:=gsk_clip_node_get_type;
  end;

function GSK_TYPE_ROUNDED_CLIP_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_ROUNDED_CLIP_NODE:=gsk_rounded_clip_node_get_type;
  end;

function GSK_TYPE_SHADOW_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_SHADOW_NODE:=gsk_shadow_node_get_type;
  end;

function GSK_TYPE_BLEND_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_BLEND_NODE:=gsk_blend_node_get_type;
  end;

function GSK_TYPE_CROSS_FADE_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_CROSS_FADE_NODE:=gsk_cross_fade_node_get_type;
  end;

function GSK_TYPE_TEXT_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_TEXT_NODE:=gsk_text_node_get_type;
  end;

function GSK_TYPE_BLUR_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_BLUR_NODE:=gsk_blur_node_get_type;
  end;

function GSK_TYPE_GL_SHADER_NODE : longint; { return type might be wrong }
  begin
    GSK_TYPE_GL_SHADER_NODE:=gsk_gl_shader_node_get_type;
  end;

function GSK_VALUE_HOLDS_RENDER_NODE(value : longint) : longint;
begin
  GSK_VALUE_HOLDS_RENDER_NODE:=G_VALUE_HOLDS(value,GSK_TYPE_RENDER_NODE);
end;


end.
